<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lay"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#31B1B3B2"
    tools:context=".fragments.FragmentFiltro">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/BanderaAzul"
        android:textAlignment="viewStart"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toTopOf="@+id/zona" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/Zona"
        android:textAlignment="viewStart"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/zona"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <RadioButton
            android:id="@+id/todasZonas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Todas" />

        <RadioButton
            android:id="@+id/zonaOriente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Oriente" />

        <RadioButton
            android:id="@+id/zonaCentro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Centro" />

        <RadioButton
            android:id="@+id/zonaOccidente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Occidente" />
    </RadioGroup>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <CheckBox
        android:id="@+id/banderaAzul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>